--- a/wrapper.html
+++ b/wrapper.html
@@ -1,13 +1,163 @@
-<!-- wrapperTemplate.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Wrapper</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Colors from the logo */
+    :root {
+      --maroon: #8B1A1A; /* Maroon color */
+      --gold: #FFD700;   /* Gold color */
+      --dark-text: #343a40;
+    }
+
+    body {
+      background-color: #f8f9fa;
+      color: var(--dark-text);
+      position: relative;
+      z-index: 1;
+      padding-bottom: 120px; /* Make space for the footer */
+    }
+
+    /* Position wave at the bottom and cover half the page */
+    .wave-container {
+      position: fixed;
+      bottom: -110px;
+      left: 0;
+      width: 100%;
+      height: 50%;  /* Half the height of the viewport */
+      z-index: -1; /* This ensures the wave stays behind other content */
+      overflow: hidden;
+    }
+
+    .wave {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 50%;
+      fill: var(--gold);  /* Set the wave color to gold */
+    }
+
+    .navbar {
+      background-color: var(--maroon);
+    }
+
+    .navbar-brand, .nav-link {
+      color: #fff !important;
+    }
+
+    .container {
+      max-width: 95%;
+      text-align: center;
+      padding: 30px 0;
+      position: relative;
+      z-index: 2;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: var(--maroon);
+      margin-bottom: 20px;
+      font-weight: 700;
+    }
+
+    p.lead {
+      color: #4a4a4a;
+    }
+
+    .iframe-wrapper {
+      border: 4px solid var(--maroon);
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      margin-top: 20px;
+      transform: scale(0.9);
+      transform-origin: top center;
+      width: 100%;
+    }
+
+    .iframe-wrapper iframe {
+      width: 100%;
+      height: 1000px;
+      border: none;
+    }
+
+    .logo {
+      margin-top: 30px;
+      max-width: 150px; /* Adjust as needed */
+      border: 3px solid var(--maroon);
+      border-radius: 50%;
+    }
+
+    /* Footer Styling */
+    .footer {
+      margin-top: 30px;
+      color: var(--dark-text);
+      font-size: 0.9rem;
+      position: relative;
+      z-index: 2;
+    }
+  </style>
 </head>
 <body>
-  <h1>Your Entire Project Inside an Iframe</h1>
-  <iframe src="http://localhost:8081" width="50%"></iframe>
+  
+  <!-- Bootstrap Header -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Dr Lembo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <h1>MapStore Landing Page</h1>
+    
+    <!-- Iframe Wrapper -->
+    <div class="iframe-wrapper">
+      <iframe src="http://localhost:8081" scrolling="yes"></iframe>
+    </div>
+    
+    <!-- Centered Logo Below the Iframe -->
+    <div class="d-flex justify-content-center">
+      <img src="sulogo.png" alt="University Logo" class="logo">
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <p>&copy; 2024 Salisbury University. All rights reserved.</p>
+    </footer>
+  </div>
+
+  <!-- Wave Container -->
+  <div class="wave-container">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="var(--gold)" fill-opacity="1" d="M0,32L34.3,53.3C68.6,75,137,117,206,112C274.3,107,343,53,411,64C480,75,549,149,617,165.3C685.7,181,754,139,823,101.3C891.4,64,960,32,1029,32C1097.1,32,1166,64,1234,74.7C1302.9,85,1371,75,1406,69.3L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path>
+    </svg>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
