Added shell scfripts

--- a/wrapper.html
+++ b/wrapper.html
@@ -136,7 +136,7 @@
     
     <!-- Iframe Wrapper -->
     <div class="iframe-wrapper">
-      <iframe src="http://localhost:8081" scrolling="yes"></iframe>
+      <iframe src="http://localhost:8080/mapstore" scrolling="yes"></iframe>
     </div>
     
     <!-- Centered Logo Below the Iframe -->
